--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
 
+<html>
+	<head>
+		<title>Crise da PM - ES</title>
+		<link href="https://fonts.googleapis.com/css?family=Arvo|Playfair+Display|Roboto+Slab" rel="stylesheet">
+		<link rel="shortcut icon" href="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" type="image/x-png">
+
+
+		<style>
+		ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		background-color: #6E8BC3;
+		}
+
+		footer {
+			background-color: #6E8BC3;
+			padding: 15px 15px;
+
+		}
+
+		body {
+			background-color: #f8f8f8
+		}
+
+		* {
+		margin: 0;
+		font-family: Playfair-Display;
+		}
+
+		h1 {
+			font-family: Arvo;
+			text-align: center;
+		}
+
+		li {
+		float: left;
+		}
+
+		article img {
+			padding-right: 20px;
+		}
+
+		.artigos-1 {
+			background-color: #e8e8e8;
+			padding: 20px 20px;
+			overflow: auto;
+			border-bottom: 1px dashed black;
+			border-top: 1px dashed black;
+		}
+
+		.artigos-2 {
+			background-color: #f8f8f8;
+			padding: 20px 20px;
+			overflow: auto;
+		}
+
+		h2 {
+			font-family: roboto-slab;
+		}
+
+		li a {
+		color: black;
+		display: block;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		}
+		li a:hover:not(.active) {
+		background-color: #f1f1f1;
+		}
+		.ativo {
+		background-color:  lightblue;
+		}
+		</style>
+	</head>
+	<body>
+		<font face="verdana">
+		<header>
+         <img src="http://image.prntscr.com/image/7b89d1e1dfff4ee5a2a9245f163262c6.png" width="100%" >
+		</header>
+
+		<nav>
+		<ul>
+    		<li><a href="#index">Home</a></li>
+    		<li><a href="#diario">Diário</a></li>
+    		<li><a href="#sobre">Sobre</a></li>
+    		<li style="float:right"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px">
+		</ul>
+	</nav>
+
+	  <br> <br> <br>
+
+			<h1> A CRISE MILITAR NO ESPÍRITO SANTO </h1>
+
+    <br> <br> <br>
+
+
+		<div class="artigos-1">
+			<article>
+				<h2>Punição de PMs grevistas</h2>
+			  <br>
+			  <img src="http://image.prntscr.com/image/1c5c23b19add478fb598d18c6622f7af.png" width="250px" height="auto" style="float:left;">
+        <p>“ Acusados de motim e revolta, policiais viram alvos de inquéritos e poderão sofrer penas de expulsão da corporação e de prisão superior a oito anos. ’’
+        <br>O comando da Polícia Militar do Estado iniciou os procedimentos para punir mais de 300 policiais que participaram da greve, o que levou o caos às cidades por falta de segurança. Nos seis dias do movimento, 113 pessoas morreram. As investigações já feitas por eles apontaram que houve motim ou revolta.
+        <br>Fatos que mostram a necessidade de se reestruturar a PM capixaba, como destacou o governador afastado por licença médica, Paulo Hartung em entrevista. – Jornal ‘Agazeta’, Vitória, sexta-feira, 10 de fevereiro de 2017.</p>
+			</article>
+		</div>
+
+  <div class="artigos-2">
+	  <article>
+	    <h2>Lista mostra os PMs investigados</h2>
+	    <br>
+			<img src="http://image.prntscr.com/image/b11dcd26f2604b849d98431227bce0d4.png" width="250px" height="auto" style="float:left;">
+      <p>“Relação traz nomes de coronéis investigados por apoiar a greve”
+      <br>A primeira lista com o nome dos policiais militares que começam a ser punidos pelo comando da corporação, por aquartelamento foi divulgada no Diário Oficial de hoje (14 de fevereiro de 2017). De acordo com o comandante da PM, coronel Nylton Rodrigues, eles vão responder por motim ou revolta, o que pode resultar em uma pena de até 20 anos.
+      <br>Segundo Rodrigues, 703 militares vão ser investigados por um Inquérito Policial Militar (IPM).
+      <br>Outros 161 vão ser alvo de processo administrativo disciplinar.</p>
+	 </article>
+	</div>
+
+		 <div class="artigos-1">
+ 			<article>
+ 				<h2>Estado adimite tropas federais</h2>
+ 			  <br>
+ 			  <img src="http://arquivos.tribunadonorte.com.br/fotos/181724.jpg" width="250px" height="auto" style="float:left;">
+        <p>O secretário de segurança pública, André Garcia, afirmou na noite de ontem que se a polícia não for para a rua hoje pela manhã, o governador em exercício, César Colnago, poderá solicitar diretamente ao presidente da República, Michel Temer, o envio de tropas federais ao Estado para garantir a ordem.- 06/fevereiro</p>
+ 			</article>
+ 		</div>
+
+  <div class="artigos-2">
+  	<article>
+  		<h2>Famílias acampam em batalhões</h2>
+  		<br>
+  		<img src="http://www.novonoticias.com/sites/default/files/styles/destaque_da_materia/public/conteudo/field/image/espirito-santo-750x422.jpg" width="250px" height="auto" style="float:left;">
+  		<p>Reunidos e travando as entradas de batalhões do Estado, filhos, mulheres de PMs e outros familiares e até crianças, estão acampando nesses locais para impedir que os militares cheguem as ruas. Os atos de bloqueios nos batalhões continuam por tempo indeterminado.- 06/fevereiro</p>
+   </article>
+  </div>
+
+  <div class="artigos-1">
+   <article>
+  	 <h2>Ônibus é incendiado de madrugada em Aracruz</h2>
+  	 <br>
+  	 <img src="http://image.prntscr.com/image/804159f8aabf417aae0d271ef2c8b399.png" width="250px" height="auto" style="float:left;">
+  	 <p>Na madrugada do dia 19 de fevereiro de 2017 um ônibus expresso foi incendiado no bairro Coqueiral de Aracruz. O veículo estava estacionado na frente da casa do motorista quando foi atacado pelos incendiários. Ninguém ficou ferido. Os funcionários perceberam o atentado por volta de 3h55 da manhã, mas o ônibus ja estava totalmente em chamas. A polícia esta investigando o caso mas nenhum suspeito foi encontrado. Esse é o nono coletivo incendiado desde o início da greve dos polícias militares.</p>
+   </article>
+  </div>
+
+	<div class="artigos-2">
+  	<article>
+  		<h2>Comerciante é morto com 19 tiros em padaria</h2>
+  		<br>
+  		<img src="http://image.prntscr.com/image/be691f970faa4607a4a0d9827fd77f8d.png" width="250px" height="auto" style="float:left;">
+  		<p>A polícia investiga se é assalto ou vingança. O dono da padaria Geraldo Martins Soares de 58 anos foi assassinado por volta das 5h30 da manhã em Central Carapina na Serra. Ele havia acabado de abrir a padaria, quando três homens encapuzados invadiram o local e o mataram. Testemunhas disseram que os bandidos chegaram a anunciar um assalto mas logo em seguida mataram o comerciante e fugiram levando apenas R$100,00 e alguns celulares. Porem no local do crime moradores disseram que ele não aceitava o toque de recolher dado por traficantes da região, por isso poderia ter sido morto. Porem a versão não é confirmada pela polícia. A polícia investiga o caso.</p>
+   </article>
+  </div>
+
+	<div class="artigos-1">
+   <article>
+  	 <h2>Acaba a greve da policia militar</h2>
+  	 <br>
+  	 <img src="http://image.prntscr.com/image/1b8051ed3ab1466a93e8abee54cfb51a.png" width="250px" height="auto" style="float:left;">
+  	 <p>Após muitas reuniões, houve o consenso entre as mulheres de PMs e governo.
+		 <br>Depois de muitas tentativas, o governo chegou a acordo com as mulheres de policiais militares em reunião mediada pelo Ministério Público do Trabalho do estado no dia 25 de fevereiro. Foram 21 dias de protesto, que teve início no dia 4 de fevereiro e terminou na manhã de sábado (25), ambas as parte lucraram com o acordo. "Ficamos satisfeitas. Para nós, foi uma vitória. Graças a Deus, saiu da melhor forma possível. Poderia ter sido melhor se não tivessem sido perdidas tantas vidas, se o governo tivesse cedido antes. Acho que a população tem que perceber que quem estava perdendo era ela. E que possa ser sentida novamente a segurança no nosso estado", disse uma representante dos familiares. "Essa negociação sempre esteve acontecendo e se chegou a um denominador que estabeleceu de vez o fim deste movimento. São decisões que fazem bem à instituição, ao policial e à sociedade. Nossa preocupação era o retorno da Polícia Militar às ruas, o que já está acontecendo", afirmou o coronel.
+     <br>No consenso foi estabelecido que o governo do estado não abrira novos Processos Administrativos Disciplinares (PADs) contra os policiais e desistira das ações judiciais contra familiares e associações.</p>
+   </article>
+  </div>
+
+		<footer>
+
+		</footer>
+	</font>
+	</body>
+</html>
