--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
 
 	  	<nav>
   		<ul>
-      		<li><a href="#index">Home</a></li>
-      		<li><a href="#diario">Diário</a></li>
-      		<li><a href="#sobre">Sobre</a></li>
+      		<li><a href="index.html">Home</a></li>
+      		<li><a href="noticias.html">Noticias</a></li>
       		<li style="float:right"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px">
 	  	</ul>
 	  </nav>
