--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 	  	</header>
 
 	  	<nav>
-  		<ul>
-      		<li><a href="index.html">Home</a></li>
-      		<li><a href="noticias.html">Noticias</a></li>
-      		<li style="float:right"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px">
-	  	</ul>
-	  </nav>
+		<ul>
+    		<li><a href="/index.html">Home</a></li>
+    		<li><a href="/noticias.html">Noticias</a></li>
+    		<li style="float:right"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px">
+		</ul>
+	</nav>
 
 	  <br> <br> <br>
 
-			  <h1> A CRISE MILITAR NO ESPÍRITO SANTO </h1>
+			<h1> A CRISE MILITAR NO ESPÍRITO SANTO </h1>
 
     <br> <br> <br>
     </body>
