--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 		<ul>
     		<li><a href="/Trabalho-interdiscilpinar/index.html">Home</a></li>
     		<li><a href="/Trabalho-interdiscilpinar/noticias.html">Noticias</a></li>
-    		<li style="float:right"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px">
+    		<li style="float:right"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px"></li>
+		<li style="float:right"><img src="http://www.baixamais.net/resources/icones-png/bandeiras-arredondadas/br.png" width="40px" height="40px"> </li>
+		<li style="float:right"><img src="http://emoji-38d7.kxcdn.com/emojione/twitter-facebook-share/1f1fa-1f1f8.png" width="40px" height="40px"> </li>
+
 		</ul>
 	</nav>
 
