--- a/noticias.html
+++ b/noticias.html
@@ -11,7 +11,7 @@
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
-		overflow: hidden;
+		overflow: auto;
 		background-color: #6E8BC3;
 		}
 
