--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 		.ativo {
 		background-color:  lightblue;
 		}
+			
+		.sobre {
+	        font-size: 16px;
+		}
 		</style>
 	</head>
   <body>
@@ -85,8 +89,10 @@
 			<h1> A CRISE MILITAR NO ESPÍRITO SANTO </h1>
 
     <br> <br> <br>
-	  
+	  <div class=sobre>
 	  <p>A crise da segurança pública no Espírito Santo em 2017 começou em 4 de fevereiro de 2017 devido à paralisação da Polícia Militar do Espírito Santo por reivindicação da correção da remuneração dos policiais militares pela inflação do período junto com o retroativo referente à ausência dessa correção desde 2010. As manifestações ocorreram em toda a Região Metropolitana de Vitória. Após reunião com Governo do Estado iniciada em 24 de fevereiro, mulheres e familiares desocupam os quartéis em 25 de fevereiro. Desde o início do movimento 199 pessoas sofreram mortes violentas no estado</p>
+	  <img src="http://midia.gruposinos.com.br/_midias/jpg/2017/02/08/1064625_07022017__dsc0319-2920351.jpg" width="400" height="400">
+	  </div>
 	  
 	  <footer>
 
