--- a/home-eng.html
+++ b/home-eng.html
@@ -99,7 +99,7 @@
 	 </article>
 	  </div>
 	  <footer>
-		  <p>Site em desenvolvimento</p>
+		 <center><p>Site em desenvolvimento</p></center>
 	</footer>
     </body>
  </html>
