--- a/noticias-eng.html
+++ b/noticias-eng.html
@@ -179,7 +179,7 @@
   </div>
 
 		<footer>
-			<p>Site em desenvolvimento</p>
+			<center><p>Site em desenvolvimento</p></center>
 		</footer>
 	</font>
 	</body>
