--- a/home-eng.html
+++ b/home-eng.html
@@ -76,7 +76,7 @@
 	  	<nav>
 		<ul>
     		<li><a href="/Trabalho-interdiscilpinar/index.html">Home</a></li>
-    		<li><a href="/Trabalho-interdiscilpinar/noticias.html">Noticias</a></li>
+    		<li><a href="/Trabalho-interdiscilpinar/noticias.html">News</a></li>
     		<li style="float:right"><a href="http://www.serra.ifes.edu.br/"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px"> </a> </li>
 		<li style="float:right"><a href="/Trabalho-interdiscilpinar/index.html"><img src="http://www.baixamais.net/resources/icones-png/bandeiras-arredondadas/br.png" width="40px" height="40px"> </a> </li>
 		<li style="float:right"><a href="/Trabalho-interdiscilpinar/home-eng.html"><img src="http://emoji-38d7.kxcdn.com/emojione/twitter-facebook-share/1f1fa-1f1f8.png" width="40px" height="40px"> </a> </li>
@@ -86,20 +86,20 @@
 
 	  <br> <br> <br>
 
-			<h1> A CRISE MILITAR NO ESPÍRITO SANTO </h1>
+			<h1> THE MILITARY CRYSIS IN THE ESPÍRITO SANTO </h1>
 
     <br> <br> <br>
 	<div class=artigos-1>
 	 <article>
 	  <div class=sobre>
-	  <p>  A crise da segurança pública no Espírito Santo em 2017 começou em 4 de fevereiro de 2017 devido à paralisação da Polícia Militar do Espírito Santo por reivindicação da correção da remuneração dos policiais militares pela inflação do período junto com o retroativo referente à ausência dessa correção desde 2010. As manifestações ocorreram em toda a Região Metropolitana de Vitória. Após reunião com Governo do Estado iniciada em 24 de fevereiro, mulheres e familiares desocupam os quartéis em 25 de fevereiro. Desde o início do movimento 199 pessoas sofreram mortes violentas no estado</p>
-          <p>  Os tabloides britânicos noticiaram sobre a greve e os atos de violência no dia 6 de fevereiro. O The Sun e o Daily Mail, em meio a fotos de pessoas feridas e de um ônibus do Transcol sendo queimado, destacaram em suas reportagens uma citação das redes sociais, que diz "Os bandidos estão atirando aleatoriamente em quem passa na rua no Espírito Santo. Meu Deus, o que está acontecendo?". Além disso, comparam os acontecimentos ao filme The Purge, em que pessoas cometem crimes com a suspensão temporária das leis. Na manchete, o The Sun noticia "Caos sem lei no Brasil com lojas saqueadas, ônibus queimados e cadáveres espalhados pela rua após policiais entrarem em greve por causa de baixos salários". O Daily Mail, na sua versão online, mostra vídeos de saques a lojas, acrescentando na manchete que "Saques, estupros e assassinatos explodem nas ruas do Brasil depois de a polícia militar entrar em greve no estado do Espírito Santo".</p>
+	  <p>  The crysis of the public security in 2017 began on February 4, 2017 due to the paralysis of the Military Police of Espírito Santo for claiming the correction of the remuneration of military police officers for the inflation of the period together with the retroactive referring to the absence of this correction since 2010. The manifestations took place throughout the Metropolitan Region of Vitória. After a meeting with the State Government that began on February 24, women and families vacate the barracks on February 25. Since the beginning of the movement 199 people have suffered violent deaths in the state.</p>
+          <p>British tabloids reported on the strike and violence on 6 February. The Sun and the Daily Mail, among photos of injured people and a bus of the Transcol being burned, highlighted in their reports a citation of social networks, that says "The bad guys are shooting randomly in who passes in the street in the Espírito Santo. My God, what's going on? " In addition, they compare the events to the film The Purge, in which people commit crimes with the temporary suspension of the laws. In the headline, The Sun notices "Lawless Chaos in Brazil with looted stores, buses burned and corpses scattered across the street after police officers strike because of low wages." The Daily Mail, in its online version, shows videos of looting at stores, adding in the headline that "Serve, rape and murder explode on the streets of Brazil after the military police strike in the state of Espírito Santo".</p>
           </div>
 	  <center> <img src="http://midia.gruposinos.com.br/_midias/jpg/2017/02/08/1064625_07022017__dsc0319-2920351.jpg" width="600" height="500"></center>	 
 	 </article>
 	  </div>
 	  <footer>
-		 <center><p>Site em desenvolvimento</p></center>
+		 <center><p>Developing website</p></center>
 	</footer>
     </body>
  </html>
