--- a/home-eng.html
+++ b/home-eng.html
@@ -3,70 +3,7 @@
 		<title>Crise da PM - ES</title>
 		<link href="https://fonts.googleapis.com/css?family=Arvo|Playfair+Display|Roboto+Slab" rel="stylesheet">
 		<link rel="shortcut icon" href="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" type="image/x-png">
-
-
-		<style>
-		ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: auto;
-		background-color: #6E8BC3;
-		}
-		footer {
-			background-color: #6E8BC3;
-			padding: 15px 15px;
-		}
-		body {
-			background-color: #f8f8f8
-		}
-		* {
-		margin: 0;
-		font-family: Playfair-Display;
-		}
-		h1 {
-			font-family: Arvo;
-			text-align: center;
-		}
-		li {
-		float: left;
-		}
-		article img {
-			padding-right: 20px;
-		}
-		.artigos-1 {
-			background-color: #e8e8e8;
-			padding: 20px 20px;
-			overflow: auto;
-			border-bottom: 1px dashed black;
-			border-top: 1px dashed black;
-		}
-		.artigos-2 {
-			background-color: #f8f8f8;
-			padding: 20px 20px;
-			overflow: auto;
-		}
-		h2 {
-			font-family: roboto-slab;
-		}
-		li a {
-		color: black;
-		display: block;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		background-color: #f1f1f1;
-		}
-		.ativo {
-		background-color:  lightblue;
-		}
-			
-		.sobre {
-	        font-size: 16px;
-		}
-		</style>
+                <link rel="stylesheet" href="/Css/style.css">
 	</head>
   <body>
 	  	<header>
