--- a/noticias-eng.html
+++ b/noticias-eng.html
@@ -3,77 +3,7 @@
 		<title>Crise da PM - ES</title>
 		<link href="https://fonts.googleapis.com/css?family=Arvo|Playfair+Display|Roboto+Slab" rel="stylesheet">
 		<link rel="shortcut icon" href="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" type="image/x-png">
-
-
-		<style>
-		ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: auto;
-		background-color: #6E8BC3;
-		}
-
-		footer {
-			background-color: #6E8BC3;
-			padding: 15px 15px;
-
-		}
-
-		body {
-			background-color: #f8f8f8
-		}
-
-		* {
-		margin: 0;
-		font-family: Playfair-Display;
-		}
-
-		h1 {
-			font-family: Arvo;
-			text-align: center;
-		}
-
-		li {
-		float: left;
-		}
-
-		article img {
-			padding-right: 20px;
-		}
-
-		.artigos-1 {
-			background-color: #e8e8e8;
-			padding: 20px 20px;
-			overflow: auto;
-			border-bottom: 1px dashed black;
-			border-top: 1px dashed black;
-		}
-
-		.artigos-2 {
-			background-color: #f8f8f8;
-			padding: 20px 20px;
-			overflow: auto;
-		}
-
-		h2 {
-			font-family: roboto-slab;
-		}
-
-		li a {
-		color: black;
-		display: block;
-		text-align: center;
-		padding: 14px 16px;
-		text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		background-color: #f1f1f1;
-		}
-		.ativo {
-		background-color:  lightblue;
-		}
-		</style>
+		<link rel="stylesheet" href="/Css/style.css">
 	</head>
 	<body>
 		<font face="verdana">
@@ -84,7 +14,7 @@
 		<nav>
 		<ul>
     		<li><a href="/Trabalho-interdiscilpinar/index.html">Home</a></li>
-    		<li><a href="/Trabalho-interdiscilpinar/noticias.html">Noticias</a></li>
+    		<li><a href="/Trabalho-interdiscilpinar/noticias.html">News</a></li>
     		<li style="float:right"><a href="http://www.serra.ifes.edu.br/"><img src="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" width="40px" height="40px"> </a> </li>
 		<li style="float:right"><a href="/Trabalho-interdiscilpinar/noticias.html"><img src="http://www.baixamais.net/resources/icones-png/bandeiras-arredondadas/br.png" width="40px" height="40px"> </a> </li>
 		<li style="float:right"><a href="/Trabalho-interdiscilpinar/noticias-eng.html"><img src="http://emoji-38d7.kxcdn.com/emojione/twitter-facebook-share/1f1fa-1f1f8.png" width="40px" height="40px"> </a> </li>
@@ -93,14 +23,14 @@
 
 	  <br> <br> <br>
 
-			<h1> A CRISE MILITAR NO ESPÍRITO SANTO </h1>
+			<h1> THE MILITARY CRYSIS IN THE ESPÍRITO SANTO </h1>
 
     <br> <br> <br>
 
 
 		<div class="artigos-1">
 			<article>
-				<h2>Punição de PMs grevistas</h2>
+				<h2>Punishment of striking PMs<h2>
 			  <br>
 			  <img src="http://image.prntscr.com/image/1c5c23b19add478fb598d18c6622f7af.png" width="250px" height="auto" style="float:left;">
         <p>“ Acusados de motim e revolta, policiais viram alvos de inquéritos e poderão sofrer penas de expulsão da corporação e de prisão superior a oito anos. ’’
@@ -111,7 +41,7 @@
 
   <div class="artigos-2">
 	  <article>
-	    <h2>Lista mostra os PMs investigados</h2>
+	    <h2>List shows PMs investigated</h2>
 	    <br>
 			<img src="http://image.prntscr.com/image/b11dcd26f2604b849d98431227bce0d4.png" width="250px" height="auto" style="float:left;">
       <p>“Relação traz nomes de coronéis investigados por apoiar a greve”
