--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Crise da PM - ES</title>
 		<link href="https://fonts.googleapis.com/css?family=Arvo|Playfair+Display|Roboto+Slab" rel="stylesheet">
 		<link rel="shortcut icon" href="https://doity.com.br/media/doity/eventos/evento-5144-logo_organizador.png" type="image/x-png">
-                <link rel="stylesheet" href="/Css/style.css">
+                <link rel="stylesheet" href="/Trabalho-interdiscilpinar/Css/style.css">
 </head>
   <body>
 	  	<header>
