--- a/noticias-eng.html
+++ b/noticias-eng.html
@@ -29,7 +29,7 @@
 
 		<div class="artigos-1">
 			<article>
-				<h2>Punishment of striking PMs<h2>
+				<h2>Punishment of striking PMs</h2>
 			  <br>
 			  <img src="http://image.prntscr.com/image/1c5c23b19add478fb598d18c6622f7af.png" width="250px" height="auto" style="float:left;">
                           <p>"Charged with riot and riot, police officers are targeted for inquiries and may face sentence of expulsion from corporation and imprisonment for more than eight years. ''</p>
@@ -113,7 +113,7 @@ In the consensus it was established that the state government had not opened new
   </div>
 
 		<footer>
-			<center><p>Site em desenvolvimento</p></center>
+			<center><p>Developing website</p></center>
 		</footer>
 	</body>
 </html>
